--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-	Visualising Xively Feeds with D3
-	Prepared by Paul Cheek
-	(c) 2013 LogMeIn, Inc.
--->
-
 <!DOCTYPE html>
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
@@ -70,7 +64,7 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<h1 style="color: #FFF; text-shadow: 0px 1px 0px #000;">
-					Visualizing Xively Feeds
+					edimp5 - we are energy
 				</h1>
 			</div>
 		</div>
@@ -107,7 +101,7 @@
 	</div>
 	<!-- Page Content -->
 	<div id="xivelyContent" style="position: relative;">
-		<a href="https://github.com/xively/channel-viz" class="hide-for-medium hide-for-small"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+	<a href="https://github.com/xively/channel-viz" class="hide-for-medium hide-for-small"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="we are energy"></a>
 		<div id="welcome">
 			<div class="row">
 				<div class="large-1 columns">&nbsp;</div>
