--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@
 				<div class="large-1 columns">&nbsp;</div>
 				<div class="large-10 columns text-center">
 					<br/><br/><br/><br/><br/><br/><br/>
-					<h1 class="subheader" style="text-align: center;">Welcome to Xively!</h1>
-					<p>This page is an example of just one of many ways you can visualise your data on Xively.<br/>It was created with open-source tools, and reads data from Xively with the Xively JavaScript library.</p>
-					<p>Read the tutorial <i>(comming soon)</i> on how to make and customise your own.</p>
+					<h1 class="subheader" style="text-align: center;">Welcome to edimp5 - we are energy</h1>
+					<p> on this page we gather the information from all energy gain and loss sensors from the - edimp5 we are energy - project. </p>
 				</div>
 				<div class="large-1 columns">&nbsp;</div>
 			</div>
@@ -119,7 +118,7 @@
 					<div class="row">
 						<div class="large-4 columns">
 							<div class="hero panel">
-								<p style="font-size: 14px;">To use this page, enter a Master API Key from your Xively account, and a list of the Feeds that you would like to display, into the forms above. You can view multiple Feeds by separating them with a comma, and select individual channels with an exclamation mark.</p>
+								<p style="font-size: 14px;">Procedure: enter Master API Key from Xively account, and a list of the Feeds and channels. Multiple Feeds from several impees are separated with a comma. Individual channels can be adressed by feed followed by exclamation mark and channel name.</p>
 							</div>
 						</div>
 						<div class="large-8 columns">
@@ -152,7 +151,7 @@
 			<div class="row">
 				<div class="large-2 columns">&nbsp;</div>
 				<div class="large-8 columns">
-					<h5 class="subheader text-center">To begin visualizing data, enter your Xively Master API key above!</h5>
+					<h5 class="subheader text-center"></h5>
 					<br/><br/><br/><br/><br/><br/><br/>
 				</div>
 				<div class="large-2 columns">&nbsp;</div>
@@ -165,7 +164,7 @@
 					<br/><br/><br/>
 					<h1 class="subheader" style="text-align: center;">Uh oh!</h1>
 					<h2 class="subheader" style="text-align: center;">Your API key is invalid!</h2>
-					<p>Please try again or generate a new key on Xively. It is important to keep in mind that this API key must be a global API key in order to work in this example. Using an application-specific API key will cause this example to malfunction.</p>
+					<p>Please try again or generate a new key on Xively. Remember that this API key must be a GLOBAL API key.</p>
 
 					<a href="#" data-reveal-id="exampleModal" class="openStart radius secondary button expand">Ready When You Are...</a>
 					<br/><br/><br/>
@@ -179,8 +178,8 @@
 				<div class="large-8 columns">
 					<br/><br/><br/>
 					<br/><br/><br/>
-					<h1 class="subheader" style="text-align: center;">Connected to Xively!</h1>
-					<h5 class="subheader text-center">To begin visualizing data, enter your Xively feed information above...</h5>
+					<h1 class="subheader" style="text-align: center;">edimp 5 we are energy</h1>
+					<h5 class="subheader text-center"></h5>
 				</div>
 				<div class="large-2 columns">&nbsp;</div>
 			</div>
@@ -190,7 +189,7 @@
 					<div class="row">
 						<div class="large-4 columns">
 							<div class="hero panel">
-								<p style="font-size: 14px;">To use this page, enter a Master API Key from your Xively account, and a list of the Feeds that you would like to display, into the forms above. You can view multiple Feeds by separating them with a comma, and select individual channels with an exclamation mark.</p>
+								<p style="font-size: 14px;"></p>
 							</div>
 						</div>
 						<div class="large-8 columns">
@@ -346,13 +345,10 @@
 		<div style="padding: 15px;">
 			<div class="row">
 				<div class="large-8 columns" style="color: rgb(81, 98, 111); padding-top: 10px; padding-bottom: 10px;">
-					<small>
-						This page was created with open-source tools, and uses data from <a style="font-weight: bold; color: rgb(81, 98, 111);" href="https://xively.com">Xively</a>. Read the <a style="font-weight: bold; color: rgb(81, 98, 111);" href="#">Tutorial (coming soon)</a> on how to make your own.
-					</small>
-				</div>
+						</div>
 				<div class="large-4 columns" style="color: rgb(81, 98, 111); padding-top: 10px; padding-bottom: 10px;">
 					<small>
-						<a style="color: rgb(81, 98, 111);" href="https://github.com/xively/channel-viz/blob/master/LICENSE.md">This library is Open Source, under the BSD 3-Clause license.</a>
+						<a style="color: rgb(81, 98, 111);" </a>
 					</small>
 				</div>
 			</div>
