--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 				<div class="large-1 columns">&nbsp;</div>
 				<div class="large-10 columns text-center">
 					<br/><br/><br/><br/><br/><br/><br/>
-					<h1 class="subheader" style="text-align: center;">Welcome to edimp5 - we are energy</h1>
-					<p> on this page we gather the information from all energy gain and loss sensors from the - edimp5 we are energy - project. </p>
+					<h1 class="subheader" style="text-align: center;">edimp5 - we are energy</h1>
+					<p> information gathering from all energy gain and loss sensors from the - edimp5 we are energy - project. </p>
 				</div>
 				<div class="large-1 columns">&nbsp;</div>
 			</div>
